Fixed styling
Fixed paralax scrolling from going too fast
Fixed spacing between banner and icons
Fixed padding and margin so that clickin the icons scroll right and the
end of the previous div
Fixed pictures so that they only take up one column when the screen size
gets too small

--- a/assets/css/nexus.css
+++ b/assets/css/nexus.css
@@ -79,7 +79,7 @@ body {
 /* Header */
 /*-----------------------------------------------------------------------------------*/
 #header {
-  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("../img/header_bg.jpg") no-repeat fixed 0 0 rgba(0, 0, 0, 0);
+  background: linear-gradient( rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7) ), url("../img/header_bg.jpg") no-repeat rgba(0, 0, 0, 0);
   display: table;
   background-color:black;
   width: 100%;
